# ArcWeaver

./: ArcWeaver.spec  ArcWeaverCli.spec  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  build_exe.ps1  build_release.ps1  launch_desktop_app.py  pyproject.toml
core/: __init__.py  archive_backend.py  cli.py  delete_ops.py  extraction_config.py  extraction_types.py  family.py  merge_ops.py  path_ops.py  polyglot.py  runtime_paths.py  signatures.py  workspace.py
core/api/: __init__.py  delete_service.py  models.py  options.py  task_cleanup.py  task_service.py
core/config/: multipart_scoring.json
core/multipart/: __init__.py  models.py  naming.py  scoring.py  settings.py  solver.py
core/workflow/: __init__.py  publish.py  recursive_evidence.py  recursive_extraction.py  recursive_finalize.py  runner.py  scanner.py  state.py
ui/: __init__.py  desktop_app.py  dragdrop.py  file_dialogs.py  session_log.py  settings.py  tasks.py
